<resources>
    <string name="app_name">PGSS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_register">No account yet? Create one</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_password">Password</string>
    <string name="login_username">Username</string>
    <string name="login_sign_in_guest">Sign In as Guest</string>
    <string name="login_progress_title">Please wait..</string>
    <string name="login_progress_content">Logining...</string>

    <!-- Strings related to register -->
    <string name="register_email">Email</string>
    <string name="register_username">Username</string>
    <string name="register_fullname">Fullname</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_sign_up">Create Account</string>
    <string name="register_login">Already a member? Login</string>

    <!-- Strings related to user -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Menu title -->
    <string name="user_guest">Guest</string>
    <string name="user_map_view_title">Map View</string>
    <string name="user_list_view_title">List View</string>
    <string name="user_save_parking_title">Save Parking Location</string>
    <string name="user_my_cars">My Cars</string>
    <string name="user_search_location_title">Search by Locations</string>
    <string name="user_select_range_title">Select Range</string>
    <string name="user_sort_title">Sort</string>
    <string name="user_about_us_title">About us</string>
    <string name="user_share_app_title">Share App</string>
    <string name="user_rate_us_title">Rate us</string>
    <string name="user_log_out_title">Log Out</string>
    <string name="user_reserved_list_title">Reserved Lots List</string>

    <!-- Strings related to car park detail -->
    <string name="carparkdetail_title">Car Park Details</string>
    <string name="carparkdetail_text_available">Spaces Available :</string>
    <string name="carparkdetail_button_call">Call</string>
    <string name="carparkdetail_button_save">Save</string>
    <string name="carparkdetail_button_reserve">Reserve</string>
    <string name="carparkdetail_reserve_dialog_title">Reserve Parking Lot</string>
    <string name="carparkdetail_reserve_dialog_message_time">Please select the duration of your reservation</string>
    <string name="carparkdetail_reserve_dialog_message">Your reservation will cost</string>
    <string name="carparkdetail_reserve_dialog_failed">An error has occurred! Please try again.</string>
    <string name="carparkdetail_reserve_dialog_successful">Your reserving request was sent successfully! \n After your reserving has been approved, you will receive a notification via app.</string>
    <string name="carparkdetail_text_distance">Kms. radius away from</string>

    <!-- Strings related to car park list -->
    <string name="carparklist_title">Near</string>
    <string name="carparklist_text_distance">Kms. radius away from </string>
    <string name="carparkdetail_button_route">Route</string>

    <!-- Strings related to transaction list -->
    <string name="transaction_title">Transaction List</string>
    <string name="transaction_text_lot_name">
        <u>Lot :</u>
    </string>

    <string name="transaction_text_amount">
        <u>Amount :</u>
    </string>
    <string name="transaction_text_pin">PIN :</string>
    <string name="transaction_dialog_button_negative">Cancel</string>
    <string name="transaction_dialog_butotn_neutral">Nothing</string>
    <string name="transaction_dialog_button_positive">Check In</string>
    <string name="transaction_dialog_failed">An error has occurred! Please try again.</string>
    <string name="transaction_dialog_successful">Your request was sent successfully!</string>

    <!-- Strings related to car park dialog -->
    <string name="dialogcarpark_title">Car Park Detail</string>
    <string name="dialogcarpark_positive_text">Update</string>
    <string name="dialogcarpark_negative_text">Cancel</string>
    <string name="dialogcarpark_name">Name</string>
    <string name="dialogcarpark_phone">Phone</string>
    <string name="dialogcarpark_email">Email</string>
    <string name="dialogcarpark_address">Address</string>
    <string name="dialogcarpark_description">Description</string>

    <!-- Strings related to manager -->
    <string name="manager_title">Own Car Parks</string>

    <!-- Strings related to area -->
    <string name="area_title">Areas in</string>

    <!-- Strings related to area dialog -->
    <string name="dialogarea_title">Area Detail</string>
    <string name="dialogarea_positive_text">Update</string>
    <string name="dialogarea_negative_text">Cancel</string>
    <string name="dialogarea_name">Name</string>
    <string name="dialogarea_active">Active</string>

    <!-- Strings related to parking lot -->
    <string name="parkinglot_title">Lots in</string>
    <!-- Strings related to parking lot dialog -->
    <string name="dialogparkinglot_title">Area Detail</string>
    <string name="dialogparkinglot_positive_text">Update</string>
    <string name="dialogparkinglot_negative_text">Cancel</string>
    <string name="dialogparkinglot_name">Name</string>
    <string name="dialogparkinglot_active">Active</string>

</resources>
