<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/linearlayout_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_dialogcarpark_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialogcarpark_name"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Phone Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_dialogcarpark_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialogcarpark_phone"
                android:inputType="phone"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_dialogcarpark_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialogcarpark_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Address Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_dialogcarpark_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialogcarpark_address"
                android:enabled="false"
                android:maxLines="10" />

        </android.support.design.widget.TextInputLayout>

        <!-- Description Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_dialogcarpark_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialogcarpark_description"
                android:maxLines="10" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>
